<resources>
    <string name="app_name">Quote Tracker</string>

    // layout titles
    <string name="title_quote_display">Quote Display</string>
    <string name="layout_quote_edit_title">Edit</string>
    <string name="no_title">No title</string>

    // text hints
    <string name="title_hint">Title</string>
    <string name="tags_hint">Tags</string>
    <string name="author_hint">Author</string>
    <string name="quote_text_hint">Text</string>
    <string name="search_hint">Type to search</string>

    // menu items
    <string name="action_add">Add new quote</string>
    <string name="action_delete">Delete quote</string>
    <string name="action_settings">Settings</string>
    <string name="action_quote_edit">Edit/Save</string>

    // Add quote confirm dialog
    <string name="confirm_add_title">Add Quote</string>
    <string name="confirm_add_text">Are you sure you want to add a new quote?</string>
    <string name="confirm_add">Add Quote</string>

    // save dialog
    <string name="confirm_save_title">Save this quote?</string>
    <string name="confirm_save_text">Do you want to save the current quote?</string>
    <string name="confirm_save">Save Quote</string>

    // edit dialog
    <string name="confirm_edit_title">Edit quote</string>
    <string name="confirm_edit_text">Are you sure you want to edit this quote?</string>
    <string name="confirm_edit">Edit Quote</string>

    // sort options
    <string name="action_sort_tag">List Tags</string>
    <string name="action_sort_title">List Quotes by Title</string>
    <string name="action_sort_author">List Quotes by Author</string>
    <string name="action_sort_text">List Quotes by Text</string>


</resources>
