<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="edu.teamawesome.cs246.quotes.MainActivity">
    <item android:id="@+id/action_add"
          android:title="@string/action_add"
          android:icon="@mipmap/ic_add_white_36dp"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          app:showAsAction="never"/>

    <item android:id="@+id/action_sort_tag"
          android:title="@string/action_sort_tag"
          app:showAsAction="never"/>

    <item android:id="@+id/action_sort_title"
          android:title="@string/action_sort_title"
          app:showAsAction="never"/>

    <item android:id="@+id/action_sort_author"
          android:title="@string/action_sort_author"
          app:showAsAction="never"/>

    <item android:id="@+id/action_sort_text"
          android:title="@string/action_sort_text"
          app:showAsAction="never"/>
    <!--TODO: Add sort options to the menu-->
</menu>
