<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/quote_viewSwitcher"
        >

    <!-- Layout to show the quote. -->
    <LinearLayout android:id="@+id/layout_quote_display"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="edu.groupawesome.quotetracker.QuoteDisplayActivity">

        <TextView android:id="@+id/quote_author"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/author_hint"/>

        <TextView android:id="@+id/quote_tags"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/tags_hint"/>

        <TextView android:id="@+id/quote_text"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/quote_text_hint"/>

    </LinearLayout>

    <!-- Layout to edit the quote. -->
    <LinearLayout android:id="@+id/layout_quote_edit_display"
                  xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior"
                  tools:context="edu.groupawesome.quotetracker.QuoteDisplayActivity">

        <EditText android:id="@+id/quote_title_edit"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/title_hint"
                  android:allowUndo="true"/>

        <EditText android:id="@+id/quote_author_edit"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/author_hint"
                  android:allowUndo="true"/>


        <EditText android:id="@+id/quote_tags_edit"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/tags_hint"
                  android:allowUndo="true"/>

        <EditText android:id="@+id/quote_text_edit"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/quote_text_hint"
                  android:allowUndo="true"/>
    </LinearLayout>

</ViewSwitcher>