<ViewSwitcher
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/quote_viewSwitcher">

    <!--Show a list of quotes-->
<LinearLayout android:id="@+id/quote_search_list"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:baselineAligned="false"
        tools:context=".ListViewSearchTestActivity">

    <SearchView
            android:id="@+id/search_view_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="@string/search_hint"/>

    <ListView
            android:id="@+id/list_view_test"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="1"/>

</LinearLayout>

    <!--show the selected quote-->
    <LinearLayout android:id="@+id/quote_display"
                  xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior"
                  tools:context="edu.groupawesome.quotetracker.QuoteDisplayActivity">

        <TextView android:id="@+id/quote_title"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/title_hint"/>

        <TextView android:id="@+id/quote_text"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

        <TextView android:id="@+id/quote_tags"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/tags_hint"/>

    </LinearLayout>

</ViewSwitcher>